--- a/_config.yml
+++ b/_config.yml
@@ -13,13 +13,13 @@ mode: dark # default theme "dark" | "light"
 author:
   name: Waleed Nizamani # author name
   bio: >- # tell to the world
-    Programmer by trade.<br>Student of Science by philosophy.
+    Software engineer by trade.<br>A humble student of science
   username: EyrisCrafts # general username
   github: K-Rafiki # github username
   twitter: twitter_username # twitter username
   facebook: facebook_username # facebook username
-  email: waleed.nizamaniwn@gmail.com # email adress
-  avatar: /assets/img/me2.png # change with your own avatar
+  email: waleed.nizamaniwn@gmail.com # email address
+  avatar: /assets/img/avatar.jpg # change with your own avatar
 
 # URL settings
 url: "https://klise.now.sh" #
