Added macos setup

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ mode: light # default theme "dark" | "light"
 author:
   name: Waleed Nizamani # author name
   bio: >- # tell to the world
-    Software engineer by trade.<br>A humble student of science
+    Software engineer by trade.<br>Student of science by philosophy
   username: EyrisCrafts # general username
   github: K-Rafiki # github username
   twitter: twitter_username # twitter username
